update: 使用React Hook进行状态管理

--- a/3.todo.md
+++ b/3.todo.md
@@ -1,1 +1,27 @@
-Svg drawImage 图片糊掉了
+# Svg drawImage 图片糊掉了
+
+# pwa
+
+# css多行文本换行
+https://juejin.cn/post/6844903733109719053
+
+```
+.ellipsis{
+  overflow: hidden;    
+  display: -webkit-box;
+  text-overflow:ellipsis;    
+  -webkit-line-clamp:2;
+  -webkit-box-orient: vertical
+}
+```
+
+https://github.com/josephschmitt/Clamp.js
+
+
+# js检测是否支持css属性
+https://www.zhangxinxu.com/wordpress/2019/11/js-css-supports-detect/
+
+# 文件下载 content-type
+https://stackoverflow.com/questions/20508788/do-i-need-content-type-application-octet-stream-for-file-download
+
+https://blog.catchpoint.com/2017/04/20/understanding-speed-index/
