--- a/非零环绕原则.md
+++ b/非零环绕原则.md
@@ -58,7 +58,7 @@
   const img = document.createElement('img');
   img.style.height = '300px'
   img.style.width = '300px'
-  img.src = './20201206175253.jpg';
+  img.src = 'xx.jpg';
   img.onload = function() {
     ctx.beginPath();
     ctx.rect(0, 0, 300, 300)    // 矩形路径
